Socker.io class with constructor whichi is setter and also getter code added

--- a/chat-app/apps/server/package.json
+++ b/chat-app/apps/server/package.json
@@ -10,5 +10,8 @@
     "devDependencies": {
         "tsc-watch": "^6.2.0",
         "typescript": "^5.4.5"
+    },
+    "dependencies": {
+        "socket.io": "^4.7.5"
     }
 }
