--- a/chat-app/apps/server/package.json
+++ b/chat-app/apps/server/package.json
@@ -12,6 +12,8 @@
         "typescript": "^5.4.5"
     },
     "dependencies": {
+        "@types/dotenv": "^8.2.0",
+        "dotenv": "^16.4.5",
         "ioredis": "^5.4.1",
         "socket.io": "^4.7.5"
     }
